[8915]云商通后台优惠券加入备注功能--table样式

--- a/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
+++ b/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
@@ -63,11 +63,11 @@ table{
 			<th width="70">类型</th>
 			<th>价值</th>
 			<th>领取限制</th>
-			<th>有效期</th>
+			<th width="126">有效期</th>
 			<th>专属商品</th>
 			<th>领取人/次</th>
 			<th>已使用</th>
-			<th>操作</th>
+			<th width="150">操作</th>
 		</tr>
 	</thead>
 </table>
