增加补签功能

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -303,7 +303,7 @@ ui-appPage-commonStyle">
                             {{html item.latest_coupon }}
                         </td>
                         <td>
-                            <a href="/apps/sign/fill/?mid=${ item.member_id }" target="_blank">
+                            <a href="/apps/sign/fill/?rid=${item.belong_to}&mid=${ item.member_id }" target="_blank">
                                 补签
                             </a>
                         </td>
