个人中心微众卡查询改成我的卡包

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -116,7 +116,7 @@
             <div class="xui-section-item">
                 <a href="{{market_tool.link}}" data-role="button" data-icon="true" class="em95">
                     <span class="xui-icon-tool mr5 xui-icon-tool-{{market_tool.en_name}}"></span>
-                    {{market_tool.name}}<span class="xui-inner-info">{{market_tool.name}}</span>
+                    {{market_tool.name}}<span class="xui-inner-info">{{market_tool.second_name}}</span>
                 </a>
             </div>
             {% endfor %}
