--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_others.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_others.html
@@ -169,7 +169,7 @@
 			<div class="xui-tab">
 				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_wallet&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" style="border-right: 1px solid #f5f5f5;">微众卡包</a>
 				<div class="xui-tab-active">其他卡包</div>
-				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" style="border-left: 1px solid #f5f5f5;">微众卡余额查询</a>
+				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_query=0" style="border-left: 1px solid #f5f5f5;">微众卡余额查询</a>
 				
 			</div>
 		</div>
