--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_wallet.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_wallet.html
@@ -332,7 +332,7 @@
 				<div class="xui-tab-active">微众卡包</div>
 				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=other_cards_list&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0
 ">其他卡包</a>
-				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0">微众卡余额查询</a>
+				<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_query=0">微众卡余额查询</a>
 				
 			</div>
 			{% if not is_binded %}
