--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -596,7 +596,7 @@ $('.xa-selectImage').click(function(){return false;})
 	$(document).ready(function() {
 
 		/*微众商城需求start 多规格开启*/
-		var webapp_id = '{{webapp_id}}';
+		var username = '{{request.manager.username}}';
 		/*微众商城需求end*/
 
 		var view = new W.view.mall.ProductEditor({
@@ -611,8 +611,8 @@ $('.xa-selectImage').click(function(){return false;})
 				$(':checkbox', $div).click();
 			}
 
-			/*微众商城需求start 多规格开启 当webapp_id 非微众商城时，多规格按钮隐藏*/
-			if(webapp_id != '3394'){
+			/*微众商城需求start 多规格开启 当username 非微众商城时，多规格按钮隐藏*/
+			if(username != 'weshop'){
 				$div.hide();
 			}
 			/*微众商城需求end*/
