--- a/weapp/mall/templates/mall/editor/promotion/virtual_products.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_products.html
@@ -10,14 +10,14 @@
 			<li class="active">福利卡券列表</li>
 		</ul>
 	</div>
-	<div class="xa-promotionFilterView xui-filterPanel"></div>
+	<div class="xa-virtualFilterView xui-filterPanel"></div>
 
 	<div class="panel panel-default mt20 xui-bigBoxbg">
 		<div class="panel panel-default ml10 mr10 mb50" style="border:none;">
 			<div class="panel-heading xui-headStyle pl18"  style="background:#E9EDF5; margin-left: -2px;">
-				<input type="checkbox" id="topSelectAll" class="xa-selectAll" />
+				<!-- <input type="checkbox" id="topSelectAll" class="xa-selectAll" />
 				<label for="topSelectAll" class="xui-topSelectAll">全选</label>
-				<a href="javascript:void(0);" class="btn btn-default ml10 xa-proBatchFinish">结&nbsp;&nbsp;&nbsp;&nbsp;束</a>
+				<a href="javascript:void(0);" class="btn btn-default ml10 xa-proBatchFinish">结&nbsp;&nbsp;&nbsp;&nbsp;束</a> -->
 				<a href="/mall2/virtual_product/" class="btn btn-success ml10 fr xui-btnSetting"><img src="/static_v2/img/editor/plusOpcity.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;新建福利卡券</a>
 			</div>
 
@@ -36,13 +36,13 @@
 				class="panel-body xui-promotionHead"
 			></div>
 
-			<div class="xui-leftBoxTow">
+		<!-- 	<div class="xui-leftBoxTow">
 				<div class="panel-heading pl22">
 					<input type="checkbox" id="bottomSelectAll"  class="xa-selectAll" style="margin-left:-1px;"/>
 				<label for="bottomSelectAll" class="xui-topSelectAll">全选</label>
 					<a href="javascript:void(0);" class="btn btn-default ml10 xa-proBatchFinish">结&nbsp;&nbsp;&nbsp;&nbsp;束</a>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div>
@@ -97,14 +97,14 @@
 					<td>
 						${item.code_stock}
 					</td>
-					<td>已经售出</td>
+					<td>${item.sell_num}</td>
 					<td>
 						${item.created_at}
 					</td>
 					<td>
-						<a href="javascript:void(0);" class="" style="width: 120px;text-decoration:none;display:block;">发放详情</a>
-						<a href="javascript:void(0);" class="" style="width: 120px;text-decoration:none;display:block;">编辑</a>
-						<a href="javascript:void(0);" class="xa-proFinish" style="width: 120px;text-decoration:none;display:block;">结束</a>
+						<a href="/mall2/virtual_product/?" class="" style="width: 120px;text-decoration:none;display:block;">发放详情</a>
+						<a href="/mall2/virtual_product/?id=${item.id}" class="" style="width: 120px;text-decoration:none;display:block;">编辑</a>
+						<a href="javascript:void(0);" class="xa-activeFinish" style="width: 120px;text-decoration:none;display:block;">结束</a>
 					</td>
 				</tr>
 				{{/each}}
@@ -119,7 +119,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-	var view = new W.view.mall.PromotionListView({
+	var view = new W.view.mall.VirtualListView({
 		el: '.xui-welfarePage',
 		templateFilterName: 'mall-welfarePage-filter-view-tmpl-src'
 	});
