--- a/weapp/mall/templates/mall/editor/promotion/virtual_product.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_product.html
@@ -19,12 +19,55 @@
 </div>
 
 <div class="xa-productSelector">
+	{% if virtual_product.id %}
+	{% else %}
 	<div class="xa-productSelectConditionPanel">
 	</div>
-
+	{% endif %}
 	<div class="panel panel-default mt20 xb-panelBg xa-errorHintContainer">
 		<div class="panel-body xa-selectedProductList mb0 pb0" style="margin-bottom:15px!important; margin-left:22px;" data-validate="require-element-exist" data-selector="tbody tr">
-			请通过查询选择参与活动的商品
+			{% if virtual_product %}
+			<table id="productListTable" class="table table-bordered mb0 table-condensed xb-noTdBorder xb-stripedTable">
+				<thead class="xui-theadHeight">
+					<tr>
+						<th>商品信息</th>
+						<th width="120">商品价格（元）</th>
+						<th>库存</th>
+					</tr>
+				</thead>
+				<tbody>
+		            {% for product in virtual_product.products %}
+					<tr class="xui-trColor" data-id="{{product.promotion.id}}">
+						<td class="tl_important pl20 pt10 pb10">
+							<div class="imgBox fl" style="width: auto;border:solid 1px #ccc;">
+								<a href="{{product.detail_link}}" target="_blank">
+									<img src="{{product.thumbnails_url}}" width="58" height="60"/>
+								</a>
+							</div>
+							<div class="ml10 fl">
+								<div class="mb25">
+									<a href="{{product.detail_link}}" target="_blank">{{product.name}}</a>
+								</div>
+								{% if product.is_use_custom_model %}
+								<span class="label label-info xa-showAllModels cursor-pointer" style="font-size: 1.0em;">查看{{product.models|length}}个规格详情</span>
+								{% else %}
+								<p style="color:#666">商品条码：{{product.bar_code}}</p>
+								{% endif %}
+							</div>
+						</td>
+						<td>
+							{{product.display_price_range}}
+						</td>
+						<td>
+							{{product.sales}}
+						</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+			{% else %}
+				请通过查询选择参与活动的商品
+			{% endif %}
 		</div>
 		<div class="errorHint pb0" style="padding-left:38px;" data-error-hint="请先选择商品"></div>
 	</div>
@@ -39,7 +82,7 @@
 		<div class="xui-i-col" style="display:block;">
 			<div class="xui-i-item">
 				<label class="star_show">活动名称：</label>
-				<input type="text" class="form-control" id="name" name="name" value="{% if promotion %}{{promotion.name}}{% endif %}" data-validate="require-string" minLength="1" maxLength="20" />
+				<input type="text" class="form-control" id="name" name="name" value="{{virtual_product.name}}" {% if virtual_product.id %}disabled="disabled"{% endif %} data-validate="require-string" minLength="1" maxLength="20" />
 				<div class="errorHint mt5 ml110" data-error-hint="活动名称必须在1-20个字内" ></div>
 			</div>
 			<div class="xui-i-item">
@@ -54,7 +97,7 @@
 					id="start_time"
 					name="start_time"
 					style=""
-				    value=""
+				    value="{{start_time}}"
 				    readonly="readonly"
 					data-validate="require-notempty"
 					data-enable-select-time="true"
@@ -73,7 +116,7 @@
 					class="form-control xui-datePicker"
 					id="end_time"
 					name="end_time"
-				    value=""
+				    value="{{end_time}}"
 				    readonly="readonly"
 					data-validate="require-notempty"
 					data-ui-role="date-picker"
