优化文件命名

--- a/weapp/mall/templates/mall/editor/promotion/virtual_products.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_products.html
@@ -119,7 +119,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-	var view = new W.view.mall.VirtualListView({
+	var view = new W.view.mall.VirtualProductListView({
 		el: '.xui-welfarePage',
 		templateFilterName: 'mall-welfarePage-filter-view-tmpl-src'
 	});
