--- a/weapp/mall/templates/mall/editor/promotion/virtual_product.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_product.html
@@ -36,33 +36,27 @@
 					</tr>
 				</thead>
 				<tbody>
-		            {% for product in virtual_product.products %}
-					<tr class="xui-trColor" data-id="{{product.promotion.id}}">
+					<tr class="xui-trColor" data-id="{{virtual_product.id}}">
 						<td class="tl_important pl20 pt10 pb10">
 							<div class="imgBox fl" style="width: auto;border:solid 1px #ccc;">
 								<a href="{{product.detail_link}}" target="_blank">
-									<img src="{{product.thumbnails_url}}" width="58" height="60"/>
+									<img src="{{virtual_product.thumbnails_url}}" width="58" height="60"/>
 								</a>
 							</div>
 							<div class="ml10 fl">
 								<div class="mb25">
-									<a href="{{product.detail_link}}" target="_blank">{{product.name}}</a>
+									<a href="{{product.detail_link}}" target="_blank">{{virtual_product.product.name}}</a>
 								</div>
-								{% if product.is_use_custom_model %}
-								<span class="label label-info xa-showAllModels cursor-pointer" style="font-size: 1.0em;">查看{{product.models|length}}个规格详情</span>
-								{% else %}
-								<p style="color:#666">商品条码：{{product.bar_code}}</p>
-								{% endif %}
+								<p style="color:#666">商品条码：{{virtual_product.product.bar_code}}</p>
 							</div>
 						</td>
 						<td>
-							{{product.display_price_range}}
+							{{virtual_product.product.price}}
 						</td>
 						<td>
-							{{product.sales}}
+							{{virtual_product.product.sales}}
 						</td>
 					</tr>
-					{% endfor %}
 				</tbody>
 			</table>
 			{% else %}
